--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Zoe Art 
-logo: logo.svg # You can add own logo.
+logo: 01.jpg # You can add own logo.
 description: Zolan is modern minimal theme for Jekyll
 
 
@@ -30,7 +30,7 @@ disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example
 
 #-------------------------------
 # Instagram Feed
-instafeed: true # To enable the instafeed, use the value true. To turn off use the value false.
+instafeed: false # To enable the instafeed, use the value true. To turn off use the value false.
 instagram-profile: artemsheludko_ # Add instagram username
 
 
