--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Zoe Art 
-logo: 01.jpg # You can add own logo.
+logo: logo.svg # You can add own logo.
 description: Zolan is modern minimal theme for Jekyll
 
 
