--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,11 +8,11 @@ description:
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
-  image: 01.jpg
+  name: Zoe
+  image: homepage.png
   say-hello: <strong>Ho 藝術工藝手作坊</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
-
+  bio: >-
+    
 
 #-------------------------------
 # Contact links
@@ -31,7 +31,7 @@ facebook: https://facebook.com/ # Add your Facebook handle
 #-------------------------------
 # Instagram Feed
 instafeed: false # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
+# instagram-profile: artemsheludko_ # Add instagram username
 
 
 #-------------------------------
