--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-baseurl: "/zoe-site" # the subpath of your site, e.g. /blog
-url: "https://syntony666.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://www.ho-art-craft.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # Build settings
