--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ description:
 # Author Settings
 author:
   name: Zoe
-  image: homepage.png
+  image: homepage.PNG
   say-hello: <strong>Ho 藝術工藝手作坊</strong>
   bio: >-
     
